traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.error
Compilation error:
TraversalDiagonal:8: error: not found: value readmessage
      if (readmessage()!="0"){
          ^